--- a/task day4.html
+++ b/task day4.html
@@ -3,24 +3,25 @@
 <html>
 <body>
 <h2>JavaScript Random</h2>
-<p id="demo"></p>
 <script>
-function getRandom() {
+ function getRandom() 
+    {
+
   return Math.random();
 }
 x = Math.floor(Math.random() * 100) + 1; 
-document.getElementById("demo").innerHTML = x;
+console.log("the random number between 1 and 100 is:"+x)
 var score='7'+'5';
-console.log("score" +score);
+console.log("score: " +score);
 score=Number('75');
 console.log(typeof(score));
-var diff=x-score;
+var diff=score-x;
 console.log("difference of the number is " +diff);
 console.log("rounded square of the number is " +Math.round(Math.sqrt(x)));
 console.log("the pi constant is " +Math.PI);
 var k="50";
 k=Number(k)*2;
-console.log("the value of 50 after conversion is " +k);
+console.log("the value of 50 after multiply by 2 is: " +k);
 </script>
 </body>
 </html>
